<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movie_image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/movie_image_content_description"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/movie_title_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_image_view" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/info_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="@id/movie_title_text_view"
            app:layout_constraintStart_toStartOf="@id/movie_title_text_view"
            app:layout_constraintTop_toBottomOf="@id/movie_title_text_view" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/overview_headline_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:text="@string/movie_overview_headline"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/movie_title_text_view"
            app:layout_constraintStart_toStartOf="@id/movie_title_text_view"
            app:layout_constraintTop_toBottomOf="@id/info_text_view" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/movie_overview_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/movie_title_text_view"
            app:layout_constraintStart_toStartOf="@id/movie_title_text_view"
            app:layout_constraintTop_toBottomOf="@id/overview_headline_text_view" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/movie_status_headline_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:text="@string/movie_status_headline"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/overview_headline_text_view"
            app:layout_constraintStart_toStartOf="@id/overview_headline_text_view"
            app:layout_constraintTop_toBottomOf="@id/movie_overview_text_view" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/movie_status_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:text=""
            app:layout_constraintEnd_toEndOf="@id/overview_headline_text_view"
            app:layout_constraintStart_toStartOf="@id/overview_headline_text_view"
            app:layout_constraintTop_toBottomOf="@id/movie_status_headline_text_view" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/movie_original_language_headline_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:text="@string/movie_original_language_headline"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/overview_headline_text_view"
            app:layout_constraintStart_toStartOf="@id/overview_headline_text_view"
            app:layout_constraintTop_toBottomOf="@id/movie_status_text_view" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/movie_original_language_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="@id/overview_headline_text_view"
            app:layout_constraintStart_toStartOf="@id/overview_headline_text_view"
            app:layout_constraintTop_toBottomOf="@id/movie_original_language_headline_text_view" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/movie_budget_headline_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:text="@string/movie_budget_headline"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/overview_headline_text_view"
            app:layout_constraintStart_toStartOf="@id/overview_headline_text_view"
            app:layout_constraintTop_toBottomOf="@id/movie_original_language_text_view" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/movie_budget_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="@id/overview_headline_text_view"
            app:layout_constraintStart_toStartOf="@id/overview_headline_text_view"
            app:layout_constraintTop_toBottomOf="@id/movie_budget_headline_text_view" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/movie_revenue_headline_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:text="@string/movie_revenue_headline"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/overview_headline_text_view"
            app:layout_constraintStart_toStartOf="@id/overview_headline_text_view"
            app:layout_constraintTop_toBottomOf="@id/movie_budget_text_view" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/movie_revenue_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="@id/overview_headline_text_view"
            app:layout_constraintStart_toStartOf="@id/overview_headline_text_view"
            app:layout_constraintTop_toBottomOf="@id/movie_revenue_headline_text_view" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/recommendations_headline_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:text="@string/movie_recommendations_headline"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/movie_title_text_view"
            app:layout_constraintStart_toStartOf="@id/movie_title_text_view"
            app:layout_constraintTop_toBottomOf="@id/movie_revenue_text_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommended_movies_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/recommendations_headline_text_view" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/similar_movies_headline_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:text="@string/movie_similar_movies_headline"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/movie_title_text_view"
            app:layout_constraintStart_toStartOf="@id/movie_title_text_view"
            app:layout_constraintTop_toBottomOf="@id/recommended_movies_recycler_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/similar_movies_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/similar_movies_headline_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>